--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -1,17 +1,52 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar color="medium">
-    <ion-title>SkeletonAPP</ion-title>
+    <ion-title>Cine Loops</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button (click)="logout()">
+        <ion-icon class="custom-icon" slot="icon-only" name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    
   </ion-toolbar>
 </ion-header>
 
+
+
+
 <ion-content [fullscreen]="true">
-  <ion-header class="ion-no-border ion-text-center">
-    <ion-toolbar>
-      <ion-title size="large">Bienvenido!</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <ion-slides [options]="slideOpts">
+    <ion-slide>
+      <img src="assets/img/fury.jpg" alt="Película 1">
+    </ion-slide>
+    <ion-slide>
+      <img src="assets/img/pijama-rayas.jpg" alt="Película 2">
+    </ion-slide>
+    <ion-slide>
+      <img src="assets/img/titanic.jpg" alt="Película 3">
+    </ion-slide>
+  </ion-slides>
+
 </ion-content>
+
 <ion-footer>
   <ion-toolbar color="medium">
+    <ion-grid>
+      <ion-row>
+        <ion-col class="ion-text-center">
+          <ion-icon name="home-outline" size="large"></ion-icon>
+        </ion-col>
+        <ion-col class="ion-text-center">
+          <ion-icon name="film-outline" size="large"></ion-icon>
+        </ion-col>
+        <ion-col class="ion-text-center">
+          <ion-icon name="cart-outline" size="large"></ion-icon>
+        </ion-col>
+        <ion-col class="ion-text-center">
+          <ion-icon name="settings-outline" size="large"></ion-icon>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-toolbar>
 </ion-footer>
