Pagina Restablecer contraseña

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -42,5 +42,10 @@
     <ion-button fill="clear" [routerLink]="['/register']" class="register-button" expand="block">
       Registrarse
     </ion-button>
+
+    <ion-button fill="clear" [routerLink]="['/restcontra']" class="register-button" expand="block">
+      Olvidaste tu contraseña
+    </ion-button>
+
   </div>
 </ion-content>
