--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -12,10 +12,8 @@
 </ion-header>
 
 
-
-
 <ion-content [fullscreen]="true">
-  <h1 class="ion-text-center">¡Bienvenido!, {{ usernameRegistro }}!</h1>
+  <h1 class="ion-text-center">¡Bienvenido!, {{ username }}!</h1>
   <ion-slides [options]="slideOpts">
     <ion-slide>
       <img src="assets/img/inicio.png" alt="Uber1">
