--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true" class="ion-no-border ion-text-center">
   <ion-toolbar>
     <ion-title>
-      <h1 class="title">My App</h1>
+      <h1 class="title">Uber</h1>
       <h6>Aquí comienza todo</h6>
     </ion-title>
   </ion-toolbar>
