--- a/src/app/pages/index/index.page.scss
+++ b/src/app/pages/index/index.page.scss
@@ -1,13 +1,25 @@
 
 ion-slide img {
-    padding: 5px;
-    width: 100%;  /* Asegura que la imagen cubra todo el ancho */
-    height: 100%; /* Asegura que la imagen cubra toda la altura */
-    object-fit: cover; 
-    border-radius: 20px;
-
+    padding: 20px;
+    width: 100%;
+    height: auto; 
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain; 
 }
 
 .custom-icon {
-    font-size: 30px; /* Cambia este valor para ajustar el tamaño del icono */
+    font-size: 30px; 
+}
+
+.img-section {
+    padding: 20px;
+}
+
+.img-section img {
+    border: 2px solid #000;
+    width: 100%;
+    height: auto; 
+    max-width: 100%;
+    max-height: 100%;
 }
