Arreglo header restablecer contra y registro

--- a/src/app/pages/restcontra/restcontra.page.html
+++ b/src/app/pages/restcontra/restcontra.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>restcontra</ion-title>
+    <ion-title class="ion-text-center">Restablecer Contraseña</ion-title>
   </ion-toolbar>
 </ion-header>
 
