--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,7 +1,5 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>SkeletonAPP</ion-title>
-  </ion-toolbar>
+<ion-header [translucent]="true" class="ion-no-border">
+
 </ion-header>
 
 <ion-content class="ion-register">
