Arreglos de botones de ruta
Se arreglo los botones para volver a la pagina de elección de usuario en las paginas conductor e index

--- a/src/app/pages/conductor/conductor.page.html
+++ b/src/app/pages/conductor/conductor.page.html
@@ -59,7 +59,7 @@
       <ion-row>
         <!-- Botón Home -->
         <ion-col class="ion-text-center">
-          <ion-button fill="clear" [routerLink]="['/conductor']">
+          <ion-button fill="clear" [routerLink]="['/elegusuario']">
             <ion-icon name="home-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
