--- a/src/app/pages/forma-viaje/forma-viaje.page.scss
+++ b/src/app/pages/forma-viaje/forma-viaje.page.scss
@@ -8,3 +8,13 @@
 .ion-info {
 margin-left: 20px;
 }
+
+ion-modal {
+    --height: auto;
+
+    align-items: end;
+}
+  
+ion-picker {
+    margin-bottom: var(--ion-safe-area-bottom);
+}
