--- a/src/app/pages/conductor/conductor.page.html
+++ b/src/app/pages/conductor/conductor.page.html
@@ -41,7 +41,7 @@
         <div class="card-text">
           <h3>Viajes en auto</h3>
           <p><strong>Edad:</strong> mayor de 18 años</p>
-          <p><strong>Vehículo:</strong> capacidad mínima para...</p>
+          <p><strong>Vehículo:</strong> capacidad mínima para 1 Pasajero</p>
         </div>
         <img src="assets/img/viaje.png" alt="Auto" />
       </ion-card-content>
