--- a/src/app/pages/forma-viaje/forma-viaje.page.html
+++ b/src/app/pages/forma-viaje/forma-viaje.page.html
@@ -186,7 +186,7 @@
       <ion-row>
         <!-- Botón Home -->
         <ion-col class="ion-text-center">
-          <ion-button fill="clear" [routerLink]="['/elegusuario']">
+          <ion-button fill="clear" [routerLink]="['/conductor']">
             <ion-icon name="home-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
