Correción titulo Error 404

--- a/src/app/pages/not-found/not-found.page.html
+++ b/src/app/pages/not-found/not-found.page.html
@@ -8,7 +8,7 @@
 <ion-content [fullscreen]="true" class="not-found-page">
   <div class="content-wrapper">
     <img src="../../../assets/img/notfound2.png" alt="">
-    <h2>Página No Encontrada</h2>
+    <h2>Página No Encontrada: Error 404</h2>
     <p>Lo sentimos, la página que buscas no existe.</p>
     <ion-button color="primary" expand="block" routerLink="/home">
       Volver al Inicio
