--- a/src/app/pages/not-found/not-found.page.html
+++ b/src/app/pages/not-found/not-found.page.html
@@ -1,14 +1,22 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar color="dark">
     <ion-title>Uber</ion-title>
+
+    <ion-buttons slot="end">
+      <!-- Llama a la función logout al hacer clic -->
+      <ion-button (click)="logout()">
+        <ion-icon class="custom-icon" slot="icon-only" name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" class="not-found-page">
   <div class="content-wrapper">
-    <img src="../../../assets/img/notfound2.png" alt="">
-    <h2>Página No Encontrada: Error 404</h2>
+    <img src="../../../assets/img/notfound2.png" alt="Página no encontrada">
+    <h2>Página No Encontrada:</h2>
+    <h2>Error 404</h2>
     <p>Lo sentimos, la página que buscas no existe.</p>
     <ion-button color="primary" expand="block" routerLink="/home">
       Volver al Inicio
@@ -20,3 +28,4 @@
   <ion-toolbar color="dark">
   </ion-toolbar>
 </ion-footer>
+
