--- a/src/app/pages/elegusuario/elegusuario.page.html
+++ b/src/app/pages/elegusuario/elegusuario.page.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 <ion-content>
-  <h2>¿Que quieres ser hoy?</h2>
+  <h2 style="text-align: center;">¿Que quieres ser hoy?</h2>
   <div class="card-container">
     <ion-card button (click)="navigateTo('conductor')">
       <ion-card-content>
@@ -39,5 +39,6 @@
 
 <ion-footer>
   <ion-toolbar color="dark">
+  <H1 style="text-align: center;" >BIENVENIDO!</H1>
   </ion-toolbar>
 </ion-footer>
