Registro de usuario Storage

--- a/src/app/pages/principal/principal.page.html
+++ b/src/app/pages/principal/principal.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Página Principal</ion-title>
+    <ion-title>Admin</ion-title>
     <!-- Icono de cerrar sesión -->
     <ion-buttons slot="end">
       <ion-button (click)="cerrarSesion()">  <!-- Función cerrarSesion se llama aquí -->
