Creacion de accesibilidad y pagina de ajustes

--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -72,22 +72,22 @@
 <ion-footer>
   <ion-toolbar color="dark">
     <ion-grid>
-      <ion-row>
+      <ion-row class="ion-justify-content-center">
         <!-- Botón Home -->
-        <ion-col class="ion-text-center">
-          <ion-button fill="clear" [routerLink]="['/index']">
+        <ion-col class="ion-text-center" size="auto">
+          <ion-button fill="clear" color="light" [routerLink]="['/elegusuario']" style="margin-top: -5px;">
             <ion-icon name="home-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
         <!-- Botón Map -->
-        <ion-col class="ion-text-center">
-          <ion-button fill="clear" [routerLink]="['/...']">
+        <ion-col class="ion-text-center" size="auto">
+          <ion-button fill="clear" color="light" [routerLink]="['/...']" style="margin-top: -5px;">
             <ion-icon name="map-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
         <!-- Botón Settings -->
-        <ion-col class="ion-text-center">
-          <ion-button fill="clear" [routerLink]="['/...']">
+        <ion-col class="ion-text-center" size="auto">
+          <ion-button fill="clear" color="light" [routerLink]="['/...']" style="margin-top: -5px;">
             <ion-icon name="settings-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
