--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -54,7 +54,7 @@
         </ion-card>
       </ion-col>
       <ion-col size="4">
-        <ion-card button [routerLink]="['/...']">
+        <ion-card button [routerLink]="['/reserva']">
           <ion-card-content>
             <img src="assets/img/reserve.png" alt="Reserve" />
             <p>Reserve</p>
