--- a/src/app/pages/conductor/conductor.page.html
+++ b/src/app/pages/conductor/conductor.page.html
@@ -51,14 +51,13 @@
   </ion-grid>
 
 </ion-content>
-
 <ion-footer>
   <ion-toolbar color="dark">
     <ion-grid>
       <ion-row class="ion-justify-content-center">
         <!-- Botón Home -->
         <ion-col class="ion-text-center" size="auto">
-          <ion-button fill="clear" [routerLink]="['/conductor']" style="margin-top: -5px;">
+          <ion-button fill="clear" [routerLink]="['/elegusuario']" style="margin-top: -5px;">
             <ion-icon name="home-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
@@ -70,7 +69,7 @@
         </ion-col>
         <!-- Botón Settings -->
         <ion-col class="ion-text-center" size="auto">
-          <ion-button fill="clear" [routerLink]="['/...']" style="margin-top: -5px;">
+          <ion-button fill="clear" [routerLink]="['/ajustes']" style="margin-top: -5px;">
             <ion-icon name="settings-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
