--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -75,19 +75,19 @@
       <ion-row class="ion-justify-content-center">
         <!-- Botón Home -->
         <ion-col class="ion-text-center" size="auto">
-          <ion-button fill="clear" color="light" [routerLink]="['/elegusuario']" style="margin-top: -5px;">
+          <ion-button fill="clear" [routerLink]="['/elegusuario']" style="margin-top: -5px;">
             <ion-icon name="home-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
         <!-- Botón Map -->
         <ion-col class="ion-text-center" size="auto">
-          <ion-button fill="clear" color="light" [routerLink]="['/...']" style="margin-top: -5px;">
+          <ion-button fill="clear" [routerLink]="['/...']" style="margin-top: -5px;">
             <ion-icon name="map-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
         <!-- Botón Settings -->
         <ion-col class="ion-text-center" size="auto">
-          <ion-button fill="clear" color="light" [routerLink]="['/...']" style="margin-top: -5px;">
+          <ion-button fill="clear" [routerLink]="['/ajustes']" style="margin-top: -5px;">
             <ion-icon name="settings-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
