Creacion de pagina Mapa y funciones del mapa

--- a/src/app/pages/forma-viaje/forma-viaje.page.html
+++ b/src/app/pages/forma-viaje/forma-viaje.page.html
@@ -186,7 +186,7 @@
           </ion-button>
         </ion-col>
         <ion-col class="ion-text-center" size="auto">
-          <ion-button fill="clear" [routerLink]="['/...']" style="margin-top: -5px;">
+          <ion-button fill="clear" [routerLink]="['/mapa']" style="margin-top: -5px;">
             <ion-icon name="map-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
