--- a/src/app/pages/index/index.page.html
+++ b/src/app/pages/index/index.page.html
@@ -81,7 +81,7 @@
         </ion-col>
         <!-- Botón Map -->
         <ion-col class="ion-text-center" size="auto">
-          <ion-button fill="clear" [routerLink]="['/...']" style="margin-top: -5px;">
+          <ion-button fill="clear" [routerLink]="['/mapa']" style="margin-top: -5px;">
             <ion-icon name="map-outline" size="large"></ion-icon>
           </ion-button>
         </ion-col>
