--- a/src/app/pages/mapa/mapa.page.html
+++ b/src/app/pages/mapa/mapa.page.html
@@ -11,6 +11,9 @@
 
 <ion-content>
   <div id="map" style="height: 100vh; width: 100%;"></div>
+  <div id="container">
+    <ion-button (click)="obtenerMiUbicacion()">Obtener Ubicación</ion-button>
+  </div>
 </ion-content>
 
 <ion-footer>
